templates are added for the app

--- a/templates/product_details.html
+++ b/templates/product_details.html
@@ -4,5 +4,5 @@
 
 <!--contents from base.html-->
 {% block content %}  
-{% include 'products_list.html' %}
+{% include 'product_description.html' %}
 {% endblock content %}
