--- a/templates/base.html
+++ b/templates/base.html
@@ -15,46 +15,25 @@
     </head>
 
 <body>
-    <!--Nav bar-->
+    
     <div class="header">
         <div class="container">
-            <div class="navbar">
-                <div class="logo">
-                    <a href="index.html"><img src=" {% static 'images/logo.png' %}" alt="logo" width="125px"></a>
-                </div>
-                <nav>
-                    <ul id="MenuItems">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="products.html">Products</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="account.html">Account</a></li>
-                    </ul>
-                </nav>
-                <a href="cart.html"><img src=" {% static 'images/cart.png' %}" width="30px" height="30px"></a>
-                <img src=" {% static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
-            </div>
-            <div class="row">
-                <div class="col-2">
-                    <h1>Give Your Workout <br> A New Style!</h1>
-                    <p>Success isn't always about greatness. It;s about consistency. Consistent <br> hard work gains
-                        success. Greatness will come.</p>
-                    <a href="" class="btn">Explore Now &#8594;</a>
-                </div>
-                <div class="col-2">
-                    <img src=" {% static 'images/image1.png' %}">
-                </div>
-            </div>
+
+            <!--Nav bar-->
+            {% include 'menu.html' %}
+
+            {% block banner %}  
+            
+            {% endblock banner %}
+            
         </div>
     </div>
      
-    <body>
-        {% block content %}  
     
-        {% endblock %}
-    </body>
+    {% block content %}  
 
-
+    {% endblock content %}
+   
 
     <!-- Footer -->
     <div class="footer">
@@ -96,8 +75,8 @@
             <p class="copyright">Copyright 2020 - Samwit Adhikary</p>
         </div>
     </div>
-        <!-- javascript -->
 
+    <!-- javascript -->
     <script>
         var MenuItems = document.getElementById("MenuItems");
         MenuItems.style.maxHeight = "0px";
