--- a/templates/account.html
+++ b/templates/account.html
@@ -16,6 +16,7 @@ Account
                 <div class="col-2">
                     <img src=" {% static 'images/image1.png' %}" width="100%">
                 </div>
+
                 <div class="col-2">
                     <div class="form-container">
                         <div class="form-btn">
@@ -23,23 +24,30 @@ Account
                             <span onclick="register()">Register</span>
                             <hr id="Indicator">
                         </div>
-                        <form id="LoginForm">
-                            <input type="text" placeholder="Username">
-                            <input type="password" placeholder="Password">
-                            <button type="submit" class="btn">Login</button>
+                        <form id="LoginForm" method = 'POST'  enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <input type="text" name="username" placeholder="Username">
+                            <input type="password" name="password" placeholder="Password">
+                            <button type="submit" name="login" class="btn">Login</button>
                             <a href="">Forget Password</a>
                         </form>
 
-                        <form id="RegForm">
-                            <input type="text" placeholder="Username">
-                            <input type="email" placeholder="Email">
-                            <input type="password" placeholder="Password">
-                            <button type="submit" class="btn">Register</button>
+                        <form id="RegForm" method = 'POST' enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <input type="text" name="username" required placeholder="Username">
+                            <input type="email" name="email" required placeholder="Email">
+                            <input type="address" name="address" required  placeholder="address">
+                            <input type="password" name="password" required  placeholder="Password">
+                            <input type="phone" name="phone" required  placeholder="phone">
+                            <button type="submit" name="register" class="btn">Register</button>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
+        
+    </div>
+{% endif %}
     </div>
 
     <script>
