--- a/templates/cart_container.html
+++ b/templates/cart_container.html
@@ -1,82 +1,39 @@
 {% load static %}
 
+
  <!-- Cart items details -->
  <div class="small-container cart-page">
+    {% if cart %}
     <table>
         <tr>
             <th>Product</th>
             <th>Quantity</th>
             <th>Subtotal</th>
         </tr>
+        {% for cartItem in the cart.added_items.all %}
         <tr>
             <td>
                 <div class="cart-info">
-                    <img src="{% static 'images/buy-1.jpg' %}">
+                    <img src="{{ cartItem.product.image.url }}">
                     <div>
-                        <p>Red Printed T-Shirt</p>
-                        <small>Price: $50.00</small>
+                        <p>{{ cartItem.product.title }}</p>
+                        <small>{{ cartItem.product.price }}</small>
                         <br>
                         <a href="">Remove</a>
                     </div>
                 </div>
             </td>
-            <td><input type="number" value="1"></td>
-            <td>$50.00</td>
+            <td><input type="number" disabled value="{{ cartItem.product.quantity }}"></td>
+            <td><input type="text" disabled value="{{ cartItem.product.size }}"></td>
+            <td>${{ cartItem.product.price }}</td>
         </tr>
-        <tr>
-            <td>
-                <div class="cart-info">
-                    <img src="{% static 'images/buy-2.jpg' %}">
-                    <div>
-                        <p>Red Printed T-Shirt</p>
-                        <small>Price: $50.00</small>
-                        <br>
-                        <a href="">Remove</a>
-                    </div>
-                </div>
-            </td>
-            <td><input type="number" value="1"></td>
-            <td>$50.00</td>
-        </tr>
-        <tr>
-            <td>
-                <div class="cart-info">
-                    <img src="{% static 'images/buy-3.jpg' %}">
-                    <div>
-                        <p>Red Printed T-Shirt</p>
-                        <small>Price: $50.00</small>
-                        <br>
-                        <a href="">Remove</a>
-                    </div>
-                </div>
-            </td>
-            <td><input type="number" value="1"></td>
-            <td>$50.00</td>
-        </tr>
+        {% endfor %}
+        
     </table>
-    <div class="total-price">
-        <table>
-            <tr>
-                <td>Subtotal</td>
-                <td>$200.00</td>
-            </tr>
-            <tr>
-                <td>Tax</td>
-                <td>$35.00</td>
-            </tr>
-            <tr>
-                <td>Total</td>
-                <td>$230.00</td>
-            </tr>
-            <tr>
-                <td>
-                    <button>Place Order</button>
-                </td>
-            </tr>
-        </table>
+    {% else %}
+    <p>Cart is Empty</p>
+    {% endif %}   
         
-        
-    </div>
-    
-    
 </div>
+    
+    
