--- a/templates/product_description.html
+++ b/templates/product_description.html
@@ -14,16 +14,23 @@
             
             <h1>{{product.title}}</h1>
             <h4>${{product.price}}</h4>
-            <select>
-                <option>Select Size</option>
-                <option>XXL</option>
-                <option>XL</option>
-                <option>L</option>
-                <option>M</option>
-                <option>S</option>
-            </select>
-            <input type="number" value="1">
-            <a href="" class="btn">Add To Cart</a>
+            <form method="post" action="{% url 'add_to_cart' %}" enctype="multipart/form-data">
+                {% csrf_token %}
+                <!--to get which product user selected-->
+                <input type="hidden" value="{{product.id}}" name="product_id"></input>
+                <select>
+                    <option value="" disabled selected>Select Size</option>
+                    <option value="size">XXL</option>
+                    <option value="size">XL</option>
+                    <option value="size">L</option>
+                    <option value="size">M</option>
+                    <option value="size">S</option>
+                </select>
+                <input type="number" name="quantity" value="1" min="1" required>
+
+                <button type='submit' class="btn">Add To Cart</button>
+
+            </form>
 
             <h3>Product Details <i class="fa fa-indent"></i></h3>
             <br>
